--- a/feladat.html
+++ b/feladat.html
@@ -461,3 +461,4 @@ USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
 USA_LexingtonSurprise, not updated, 0.0<br />
 Australia_BrisbaneHeartPopUp, <b>updated</b>, 183, <a href="https://www.munzee.com/map/r7hg9yzzd/16.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BrisbaneHeartPopUp.json" target="_blank">json</a> <b>100%</b><br />
+Australia_QldJacaranda, <b>updated</b>, 670, <a href="https://www.munzee.com/map/r7hucvdgx/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QldJacaranda.json" target="_blank">json</a> <b>100%</b><br />
