--- a/feladat.html
+++ b/feladat.html
@@ -489,3 +489,4 @@ Germany_ErnieInVolksdorf, not updated, 0.0<br />
 Germany_Quietscheentchen kihagyva (100%), <br />
 Germany_Hammaburg, not updated, 0.0<br />
 Germany_FCStPauli, <b>updated</b>, 1002, <a href="https://www.munzee.com/map/u1x076pj4/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FCStPauli.json" target="_blank">json</a><br />
+Germany_YinYangNeustadt, <b>updated</b>, 162, <a href="https://www.munzee.com/map/u1xey2pvq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_YinYangNeustadt.json" target="_blank">json</a><br />
