--- a/feladat.html
+++ b/feladat.html
@@ -417,3 +417,82 @@ Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.09000000000000341<br />
 Germany_PatchworkRT, not updated, 0.8399999999999963<br />
 Germany_FlatsAppenzellerRT, <b>updated</b>, 2176, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.0<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_KaisiadorysHammer kihagyva (100%), <br />
+Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
+Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
+Lithuania_BalticWay30 kihagyva (100%), <br />
+Austria_FrauenkirchenOwl, not updated, 0.0<br />
+Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
+Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
+Lithuania_KaunasScatter1 kihagyva (100%), <br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, not updated, 0.0<br />
+Lithuania_FebruaryEvent, not updated, 0.0<br />
+USA_TheLuckyFungi kihagyva (100%), <br />
+USA_SunAndMoon, not updated, 0.0<br />
+USA_LexingtonSurprise, not updated, 0.0<br />
+Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
+Australia_QldJacaranda kihagyva (100%), <br />
+Australia_FairyWren kihagyva (100%), <br />
+Germany_BerlinCardsPin kihagyva (100%), <br />
+Germany_Pretzel kihagyva (100%), <br />
+Germany_AdventurePortal2, not updated, 0.0<br />
+Germany_BerlinVoidMapleChess, not updated, 0.0<br />
+Germany_SweetHeart kihagyva (100%), <br />
+Germany_WittenauerMischMasch, not updated, 0.0<br />
+Germany_BerlinBYOG2020 kihagyva (100%), <br />
+Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
+Germany_GermanHeart kihagyva (100%), <br />
+Australia_RUMportal kihagyva (100%), <br />
+Australia_MiniPortal1 kihagyva (100%), <br />
+Denmark_MiniPortal2 kihagyva (100%), <br />
+Germany_MattPin kihagyva (100%), <br />
+Germany_CrossbowShield kihagyva (100%), <br />
+Germany_FlatLouPin kihagyva (100%), <br />
+Germany_FlatHammockPin kihagyva (100%), <br />
+Germany_FlatRobPin kihagyva (100%), <br />
+Germany_CrossbowPin kihagyva (100%), <br />
+Germany_MysteryPin kihagyva (100%), <br />
+Germany_GreeniePin kihagyva (100%), <br />
+Germany_SperenbergTeddy kihagyva (100%), <br />
+Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
+Germany_ErnieInVolksdorf, not updated, 0.0<br />
+Germany_Quietscheentchen kihagyva (100%), <br />
+Germany_Hammaburg, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.0<br />
+Germany_YinYangNeustadt, not updated, 0.0<br />
+Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
+Denmark_SoparkenMaribo kihagyva (100%), <br />
+Denmark_NonneMaribo kihagyva (100%), <br />
+Denmark_ZeecretSundby kihagyva (100%), <br />
+Denmark_FjerNykobing, not updated, 0.0<br />
+Denmark_SpejdernesLejr2022, <b>updated</b>, 362, <a href="https://www.munzee.com/map/u3bsmp537/14.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SpejdernesLejr2022.json" target="_blank">json</a><br />
