--- a/feladat.html
+++ b/feladat.html
@@ -496,3 +496,4 @@ Denmark_NonneMaribo kihagyva (100%), <br />
 Denmark_ZeecretSundby kihagyva (100%), <br />
 Denmark_FjerNykobing, not updated, 0.0<br />
 Denmark_SpejdernesLejr2022, <b>updated</b>, 362, <a href="https://www.munzee.com/map/u3bsmp537/14.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SpejdernesLejr2022.json" target="_blank">json</a><br />
+Denmark_JuletraeIViby, <b>updated</b>, 105, <a href="https://www.munzee.com/map/u3becz31u/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_JuletraeIViby.json" target="_blank">json</a> <b>100%</b><br />
