--- a/feladat.html
+++ b/feladat.html
@@ -498,3 +498,4 @@ Denmark_FjerNykobing, not updated, 0.0<br />
 Denmark_SpejdernesLejr2022, <b>updated</b>, 362, <a href="https://www.munzee.com/map/u3bsmp537/14.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SpejdernesLejr2022.json" target="_blank">json</a><br />
 Denmark_JuletraeIViby, <b>updated</b>, 105, <a href="https://www.munzee.com/map/u3becz31u/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_JuletraeIViby.json" target="_blank">json</a> <b>100%</b><br />
 Denmark_ZeecretViby, <b>updated</b>, 95, <a href="https://www.munzee.com/map/u3becrqvc/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ZeecretViby.json" target="_blank">json</a> <b>100%</b><br />
+Denmark_NVGogglesSoro, <b>updated</b>, 259, <a href="https://www.munzee.com/map/u3b5qfseg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_NVGogglesSoro.json" target="_blank">json</a> <b>100%</b><br />
