--- a/feladat.html
+++ b/feladat.html
@@ -509,3 +509,4 @@ Denmark_FlatSquare, <b>updated</b>, 273, <a href="https://www.munzee.com/map/u3b
 USA_HotelEvo, <b>updated</b>, 271, <a href="https://www.munzee.com/map/9zqy6k6uy/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HotelEvo.json" target="_blank">json</a> <b>100%</b><br />
 USA_Emoji, <b>updated</b>, 853, <a href="https://www.munzee.com/map/9zvwzm81g/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Emoji.json" target="_blank">json</a><br />
 USA_ElectricJHawk, <b>updated</b>, 385, <a href="https://www.munzee.com/map/9zqy9rtfs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ElectricJHawk.json" target="_blank">json</a><br />
+USA_DesMoinesGreetingCards, <b>updated</b>, 111, <a href="https://www.munzee.com/map/9zmktsu71/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DesMoinesGreetingCards.json" target="_blank">json</a><br />
