--- a/feladat.html
+++ b/feladat.html
@@ -515,3 +515,4 @@ USA_KCNightLights2, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yut
 USA_KCNightLights3, <b>updated</b>, 40, <a href="https://www.munzee.com/map/9yutzxumv/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KCNightLights3.json" target="_blank">json</a> <b>100%</b><br />
 USA_KCNightLights4, <b>updated</b>, 39, <a href="https://www.munzee.com/map/9yutvf65z/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KCNightLights4.json" target="_blank">json</a> <b>100%</b><br />
 USA_KCNightLights5, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yuvbt02e/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KCNightLights5.json" target="_blank">json</a> <b>100%</b><br />
+USA_KansasCityPanda, <b>updated</b>, 321, <a href="https://www.munzee.com/map/9yuvbucpq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KansasCityPanda.json" target="_blank">json</a><br />
