--- a/feladat.html
+++ b/feladat.html
@@ -530,3 +530,4 @@ USA_UnofficialCREvo, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9z
 USA_CRElectricMystery, <b>updated</b>, 567, <a href="https://www.munzee.com/map/9zqy9w1zy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRElectricMystery.json" target="_blank">json</a> <b>100%</b><br />
 USA_CRHolidayPizza, <b>updated</b>, 414, <a href="https://www.munzee.com/map/9zqy8y2d6/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRHolidayPizza.json" target="_blank">json</a> <b>100%</b><br />
 USA_CRRose, <b>updated</b>, 455, <a href="https://www.munzee.com/map/9zqyc08tb/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRRose.json" target="_blank">json</a> <b>100%</b><br />
+USA_CRHonorCross, <b>updated</b>, 695, <a href="https://www.munzee.com/map/9zqy9whw6/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRHonorCross.json" target="_blank">json</a> <b>100%</b><br />
