--- a/feladat.html
+++ b/feladat.html
@@ -538,3 +538,4 @@ USA_BowlingBash, <b>updated</b>, 200, <a href="https://www.munzee.com/map/9zfzsg
 USA_AtlanticDuck, <b>updated</b>, 126, <a href="https://www.munzee.com/map/9zk7tg974/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AtlanticDuck.json" target="_blank">json</a><br />
 USA_80sCube, <b>updated</b>, 793, <a href="https://www.munzee.com/map/9zqz5kqsw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_80sCube.json" target="_blank">json</a> <b>100%</b><br />
 USA_CRSubmarine, <b>updated</b>, 369, <a href="https://www.munzee.com/map/9zqy6mkwx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRSubmarine.json" target="_blank">json</a> <b>100%</b><br />
+USA_IowaVeteransCemetery, <b>updated</b>, 471, <a href="https://www.munzee.com/map/9zmhq5k8w/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IowaVeteransCemetery.json" target="_blank">json</a><br />
